# log-playground

./: .gitignore  .pre-commit-config.yaml  compose.yaml  pyproject.toml
app_logfire/: app.py
app_otel/: app.py
